@@ -59,6 +59,7 @@ alter table shop_items_productsku add column assign_num int(11) default 0 after 
 
 ########2016-03-31####################################
 ALTER TABLE `flashsale_address` DEFAULT CHARACTER SET utf8 COLLATE utf8_bin;
+ALTER TABLE `shopmgr`.`flashsale_address` CHANGE COLUMN `receiver_name` `receiver_name` varchar(25) CHARACTER SET utf8 COLLATE utf8_bin NOT NULL, CHANGE COLUMN `receiver_state` `receiver_state` varchar(16) CHARACTER SET utf8 COLLATE utf8_bin NOT NULL, CHANGE COLUMN `receiver_city` `receiver_city` varchar(16) CHARACTER SET utf8 COLLATE utf8_bin NOT NULL, CHANGE COLUMN `receiver_district` `receiver_district` varchar(16) CHARACTER SET utf8 COLLATE utf8_bin NOT NULL, CHANGE COLUMN `receiver_address` `receiver_address` varchar(128) CHARACTER SET utf8 COLLATE utf8_bin NOT NULL, CHANGE COLUMN `receiver_mobile` `receiver_mobile` varchar(11) CHARACTER SET utf8 COLLATE utf8_bin NOT NULL, CHANGE COLUMN `receiver_phone` `receiver_phone` varchar(20) CHARACTER SET utf8 COLLATE utf8_bin NOT NULL, DEFAULT CHARACTER SET utf8 COLLATE utf8_bin;
 ALTER TABLE `flashsale_address` ADD UNIQUE INDEX `uq` (`cus_uid`, `receiver_name`, `receiver_state`, `receiver_city`, `receiver_district`, `receiver_address`, `receiver_mobile`,`receiver_phone`) USING HASH ;
 
 alter table suplychain_flashsale_orderlist add column supplier_id int(11) default null references supplychain_supply_supplier(id);
